--- a/core/res/res/values/scorpion_dimens.xml
+++ b/core/res/res/values/scorpion_dimens.xml
@@ -18,4 +18,8 @@
 
     <!-- Toast -->
     <dimen name="toast_elevation">4dp</dimen>
+
+    <!-- OP Gestures -->
+    <dimen name="nav_gesture_swipe_min_length">50dp</dimen>
+    <dimen name="nav_gesture_long_press_max_length">45dp</dimen>
 </resources>
