--- a/core/res/res/values/scorpion_symbols.xml
+++ b/core/res/res/values/scorpion_symbols.xml
@@ -167,6 +167,10 @@
   <java-symbol type="bool" name="config_multiColorBatteryLed" />
   <java-symbol type="bool" name="config_ledCanPulse" />
 
-    <!-- System fonts -->
-    <java-symbol type="array" name="config_fontPackages" />
+  <!-- System fonts -->
+  <java-symbol type="array" name="config_fontPackages" />
+
+  <!-- OP Gestures -->
+  <java-symbol type="dimen" name="nav_gesture_swipe_min_length" />
+  <java-symbol type="dimen" name="nav_gesture_long_press_max_length" />
 </resources>
