--- a/core/res/res/values/scorpion_symbols.xml
+++ b/core/res/res/values/scorpion_symbols.xml
@@ -167,4 +167,6 @@
   <java-symbol type="bool" name="config_multiColorBatteryLed" />
   <java-symbol type="bool" name="config_ledCanPulse" />
 
+    <!-- System fonts -->
+    <java-symbol type="array" name="config_fontPackages" />
 </resources>
